@@ -28,8 +28,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-
 import org.apache.jackrabbit.oak.Oak;
 import org.apache.jackrabbit.oak.OakBaseTest;
 import org.apache.jackrabbit.oak.fixture.NodeStoreFixture;
@@ -60,7 +58,7 @@ public class TreeTest extends OakBaseTest {
     public void setUp() {
         repository = new Oak(store)
             .with(new OpenSecurityProvider())
-            .with(new CompositeConflictHandler(ImmutableList.of(
+            .with(new CompositeConflictHandler(List.of(
                     ConflictHandlers.wrap(new ChildOrderConflictHandler() {
                         /**
                          * Allow deleting changed node.
